# etask

./: .gitignore  CMakeLists.txt  Makefile  README.md  conandata.yml
app/: main.cpp
docs/: description
itask_lib/: CMakeLists.txt
itask_lib/aggregator/: aggregator.cpp  aggregator.h
itask_lib/cli/: cli_parser.cpp  cli_parser.h
itask_lib/mapper/: mapper.cpp  mapper.h
itask_lib/preprocessor/: preprocessor.cpp  preprocessor.h
itask_lib/reducer/: reducer.cpp  reducer.h
itask_lib/statistics/: metrics.cpp  metrics.h  staticstics.cpp  staticstics.h
itask_lib/utils/filesystem/: filesystem.h
itask_lib/utils/misc/: misc.h
itask_lib/utils/types/: cli.h  preprocessor.h  types.h
test/: CMakeLists.txt
test/itask_lib_test/cli_test/: cli_test.cpp
test/itask_lib_test/mapper_test/: mapper_test.cpp
test/itask_lib_test/preprocessor_test/: preprocessor_test.cpp
test/itask_lib_test/reducer_test/: reducer_test.cpp
